--- a/styles/main.css
+++ b/styles/main.css
@@ -58,5 +58,11 @@ textarea{
    /* border: 1px solid red; */
     /*preenchimento*/
    /* padding: 10px 40px 100px; funciona sentido horario*/
-    box-sizing: border-box;  
+    /* box-sizing: border-box;   */
+}
+
+@media (min-width:700px){
+    :root {
+        font-size: 62.5%; /*todo 1rem sera relativo a 10px*/
+    }
 }
