--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,8 +1,3 @@
-:root{
-    font-size: 40%; 
-    /* modificar as medidas rem */
-}
-
 #page-landing{
     background: var(--color-primary);
 }
@@ -54,4 +49,87 @@
     justify-content: center;
 
     text-decoration: none; /*nao fica aquela linha abaixo do link*/
+
+    transition: background 0.2s;
+
+    color: var(--color-button-text); /*definido no root main.css*/
+}
+.buttons-container a img{
+    width: 4rem;
+    margin-right: 2.4rem; /*separar imagem do texto*/
+}
+
+.buttons-container a.study {
+    background: var(--color-primary-lighter);
+}
+
+.buttons-container a.study:hover{
+    background: var(--color-primary-light);
+}
+
+.buttons-container a.give-classes {
+    background: var(--color-secondary);
+    margin-right: 0;
+}
+
+.buttons-container a.give-classes:hover {
+    background: var(--color-secondary-dark);
+}
+
+.total-connections {
+    font-size: 1.8rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.total-connections img{
+    margin-left: 0.8rem;
+}
+
+@media (max-width: 699px){
+    :root {
+        font-size: 40%;
+    }
+}
+
+@media (min-width: 1100px) {/*padrão que será usado somente quando for necessário- será visto somente quando o 
+dispositivo tiver largura 1100px*/
+    #page-landing #container{
+        max-width: 1100px; /*quando chegar em 1100px a largura será 1100*/
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 1fr;
+        grid-template-areas: 
+        "proffy image image"
+        "button button texting";
+        column-gap: 87px;
+        row-gap: 86px;
+    }
+    .logo-container {
+       grid-area: proffy;
+       text-align: initial;
+       align-self: center;
+       margin: 0;
+    }
+     .logo-container img{
+         height: 127px;
+
+     }
+    .hero-image{
+       grid-area: image;
+       height: 350px;
+       
+    }
+    .buttons-container{
+       grid-area: button;
+       justify-content: flex-start;
+       margin: 0;
+
+    }
+    .total-connections{
+        grid-area: texting;
+        justify-self: end;
+        font-size: 1.2rem;
+    }
 }
