--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -42,7 +42,7 @@
     border-radius: .8rem;
     margin-right: 1.6rem;
 
-    font: 700 2.4rem Archivo;
+    font: 700 2.4rem Poppins;
 
     display: flex;
     align-items: center;
