--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -36,6 +36,8 @@
 .page-header .header-content{
     width: 90%;
     margin: 3.2rem auto;
+
+    position: relative;
 }
 
 .page-header .header-content strong{
@@ -149,7 +151,7 @@
     margin-top: .4rem;
 }
 
-.teacher-item p{
+.teacher-item > p{
     padding: 0 2rem;
     font-size: 1.6rem;
     line-height: 2.8rem;
@@ -202,6 +204,67 @@
      background: var(--color-secondary-dark);
  }
     /* esse é o plano pra desktop*/
-    @media
+    @media(min-width:700px){
+         #page-study #container{
+             max-width: 100vw;
+         }
+         .page-header{
+             height: 340px;
+         }
+
+         .page-header .top-bar-container{
+             max-width: 1100px;
+         }
+         .page-header .header-content{
+             max-width: 740px;
+             margin: 0 auto;
+             flex: 1 1;
+             padding-bottom: 48px;
+             display: flex;
+             flex-direction: column;
+             justify-content: center;
+
+         }
+         .page-header .header-content strong{
+             max-width: 350px;
+         }
+
+         .teacher-item header,
+         .teacher-item footer{
+             padding: 32px;
+         }
+         #search-teachers {
+             display: grid;
+             grid-template-columns: repeat(4, 1fr);
+             gap: 16px;
+             position: absolute;
+             bottom: -28px;
+         }
+         #page-study main{
+             padding: 32px 0;
+             max-width: 740px;
+             margin: 0 auto;
+         }
+         #search-teachers .select-block{
+             margin-bottom: 0;
+         }
+          /* o simbolo > significa que esta pegando somente o primeiro elemento p da tag */
+         .teacher-item > p{
+             padding: 0 32px;
+         }
+
+         .teacher-item footer p strong{
+             display: initial;
+             margin-left: 16px;
+         }
+         .teacher-item footer button{
+             width: 245px;
+             font-size: 16px;
+             justify-content: center;
+         }
+         .teacher-item footer button img{
+             margin-right: 16px;
+         }
+    }
 
 
