forms give-classes

--- a/styles/partials/forms.css
+++ b/styles/partials/forms.css
@@ -23,10 +23,10 @@
     padding: 1.2rem 1.6rem;
     height: 16rem;
 
-    resize: vertical
+    resize: vertical;
 }
 
-.input-block
+.input-block,
 .textarea-block{
     position: relative;
 }
