finalização do layout

--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -130,7 +130,24 @@
         column-gap: 1.6rem;  
     }
 
-    .schedule-item .input-block{
+    #page-give-classes #schedule-items .select-block+.input-block,
+    #page-give-classes #schedule-items .input-block+.input-block{
         margin-top: 0;
     }
+
+    #page-give-classes main footer{
+    padding: 40px 64px;
+     
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    }
+
+    #page-give-classes main footer button{
+        margin-top: 0;
+
+        width: 200px;
+    }
+
+
 }
