--- a/src/views/index.html
+++ b/src/views/index.html
@@ -27,11 +27,11 @@
       <img class="hero-image" src="/images/landing.svg" alt="Plataforma de Estudos">
         <!-- para definir uma classe basta digitar . ponto + nome classe desejada + tab -->
        <div class="buttons-container">
-           <a class="study" href="/study.html">
+           <a class="study" href="/study">
              <img src="/images/icons/study.svg" alt="Estudar">
              Estudar
            </a>
-           <a class="give-classes" href="/give-classes.html">
+           <a class="give-classes" href="/give-classes">
             <img src="/images/icons/give-classes.svg" alt="Dar Aulas">
              Dar Aulas
           </a>
