--- a/src/views/study.html
+++ b/src/views/study.html
@@ -37,16 +37,13 @@
                <label for="subject">Matéria</label>
                <select name="subject" id="subject">
                  <option value="" disabled="" hidden="">Selecione uma opção</option>
-                 <option value="1">Artes</option>
-                 <option value="2">Biologia</option>
-                 <option value="3">Ciências</option>
-                 <option value="4">Educação Física</option>
-                 <option value="5">Física</option>
-                 <option value="6">Geografia</option>
-                 <option value="7">História</option>
-                 <option value="8">Matemática</option>
-                 <option value="9">Química</option>
-                 <option value="10">Português</option>
+                 <!-- fazer o looping -->
+                 {%for subject in subjects %}
+                   <option value="{{loop.index}}" {{"selected" if filters.subject == loop.index }}>
+                     {{subject}}
+                   </option>
+                 {%endfor%}
+
                </select>
              </div>
         <div class="select-block">
@@ -63,34 +60,37 @@
         </div>
         <div class="input-block">
           <label for="time">Hora</label>
-          <input name="time" id="time" type="time">
+          <input name="time" id="time" type="time" value="{{filters.time}}">
         </div>
         <button type="submit">Filtrar</button>
        </form>
       </div>
      </header>
      <main>
-       <!-- conteudo principal pagina -->
+       <!-- estrutura for nunjucks - para cada proffy imprimir 1 proffys-->
+       {%for proffy in proffys %}
        <article class="teacher-item">
-         <header>
-           <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;
-           u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" alt="Diego Fernandes">
-           <div>
-             <strong> Diego Fernandes</strong>
-           <span>Química</span></div>
-         </header>
-         <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em 
-         laboratório e por mudar a vida das pessoas através de experiencias.Mais de 200.000 pessoas já passaram 
-         por uma das explosões</p>
-        <footer>
-          <p>Preço/hora<strong>R$ 20,00</strong>
-          </p>
-          <button type="button"> <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-          </button>
-        </footer>
-       </article>
+        <header>
+          <img 
+          src="{{proffy.avatar}}"
+          alt="{{proffy.name}}">
+          <div>
+            <strong> {{proffy.name}}</strong>
+          <span>{{proffy.subject}}</span></div>
+        </header>
+        <p>{{proffy.bio}}</p>
+       <footer>
+         <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
+         </p>
+         <a href="https://api.whatsapp.com/send?l=pt_BR&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
+            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+         </a>
+       </footer>
+      </article>
+       {%endfor%}
+       <!-- conteudo principal pagina -->       
 
-       <article class="teacher-item">
+       <!-- <article class="teacher-item">
         <header>
           <img src="https://avatars1.githubusercontent.com/u/9097132?s=460&u=d0793ebbde0fa8170e7b4603b94a3156ef28e901&v=4"
            alt="Giane Mariano">
@@ -107,7 +107,7 @@
          <button type="button"> <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
          </button>
        </footer>
-      </article>
+      </article> -->
 
      </main>
     </div>    
