--- a/src/views/study.html
+++ b/src/views/study.html
@@ -49,13 +49,13 @@
         <div class="select-block">
             <label for="weekday">Dia da semana</label>
             <select name="weekday" id="weekday">
-              <option value="0">Domingo</option>
-              <option value="1">Segunda-feira</option>
-              <option value="2">Terça-feira</option>
-              <option value="3">Quarta-feira</option>
-              <option value="4">Quinta-feira</option>
-              <option value="5">Sexta-feira</option>
-              <option value="6">Sábado</option>
+              <option value="" disabled="" hidden="">Selecione uma opção</option>
+              <!-- fazer o looping -->
+              {%for weekday in weekdays %}
+                <option value="{{loop.index0}}" {{"selected" if filters.weekday == loop.index0 }}>
+                  {{weekday}}
+                </option>
+              {%endfor%}             
             </select>
         </div>
         <div class="input-block">
